[gd_scene load_steps=12 format=3 uid="uid://7tnkng0latb0"]

[ext_resource type="Script" uid="uid://7mc484ypt0k6" path="res://test/trap_door.gd" id="1_8405y"]

[sub_resource type="Gradient" id="Gradient_8405y"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c1qgr"]
gradient = SubResource("Gradient_8405y")
width = 48
height = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8405y"]
size = Vector2(48, 8)

[sub_resource type="Gradient" id="Gradient_35mmf"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8405y"]
gradient = SubResource("Gradient_35mmf")
width = 48
height = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1qgr"]
size = Vector2(48, 8)

[sub_resource type="Animation" id="Animation_c1qgr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot_left:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot_right:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eq71w"]
resource_name = "close"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot_left:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5707963267948966, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot_right:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5707963267948966, 0.0]
}

[sub_resource type="Animation" id="Animation_8405y"]
resource_name = "open"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot_left:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot_right:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5707963267948966]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c1qgr"]
_data = {
&"RESET": SubResource("Animation_c1qgr"),
&"close": SubResource("Animation_eq71w"),
&"open": SubResource("Animation_8405y")
}

[node name="trap_door" type="Node2D"]
script = ExtResource("1_8405y")

[node name="pivot_left" type="Node2D" parent="."]
position = Vector2(-48, 0)

[node name="left" type="StaticBody2D" parent="pivot_left"]
position = Vector2(24, 4)

[node name="Sprite2D" type="Sprite2D" parent="pivot_left/left"]
texture = SubResource("GradientTexture2D_c1qgr")

[node name="left_collision" type="CollisionShape2D" parent="pivot_left/left"]
shape = SubResource("RectangleShape2D_8405y")

[node name="pivot_right" type="Node2D" parent="."]
position = Vector2(48, 0)

[node name="right" type="StaticBody2D" parent="pivot_right"]
position = Vector2(-24, 4)

[node name="Sprite2D" type="Sprite2D" parent="pivot_right/right"]
texture = SubResource("GradientTexture2D_8405y")

[node name="right_collision" type="CollisionShape2D" parent="pivot_right/right"]
shape = SubResource("RectangleShape2D_c1qgr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c1qgr")
}
